@@ -1,0 +1,113 @@
+# This Build.PL for Mojo-Reactor-UV was generated by
+# Dist::Zilla::Plugin::ModuleBuildTiny::Fallback 0.020
+use strict;
+use warnings;
+
+my %configure_requires = (
+    'Module::Build::Tiny' => '0.034',
+);
+
+my @missing = grep {
+    ! eval "require $_; $_->VERSION($configure_requires{$_}); 1"
+} keys %configure_requires;
+
+if (not @missing)
+{
+    # This section for Mojo-Reactor-UV was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.014.
+    use strict;
+    use warnings;
+
+    use 5.010001;
+    # use Module::Build::Tiny 0.034;
+    Module::Build::Tiny::Build_PL();
+}
+else
+{
+    if (not $ENV{PERL_MB_FALLBACK_SILENCE_WARNING})
+    {
+        warn <<'EOW';
+*** WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING ***
+
+If you're seeing this warning, your toolchain is really, really old* and you'll
+almost certainly have problems installing CPAN modules from this century. But
+never fear, dear user, for we have the technology to fix this!
+
+If you're using CPAN.pm to install things, then you can upgrade it using:
+
+    cpan CPAN
+
+If you're using CPANPLUS to install things, then you can upgrade it using:
+
+    cpanp CPANPLUS
+
+If you're using cpanminus, you shouldn't be seeing this message in the first
+place, so please file an issue on github.
+
+This public service announcement was brought to you by the Perl Toolchain
+Gang, the irc.perl.org #toolchain IRC channel, and the number 42.
+
+----
+
+* Alternatively, you are running this file manually, in which case you need
+to learn to first fulfill all configure requires prerequisites listed in
+META.yml or META.json -- or use a cpan client to install this distribution.
+
+You can also silence this warning for future installations by setting the
+PERL_MB_FALLBACK_SILENCE_WARNING environment variable, but please don't do
+that until you fix your toolchain as described above.
+
+EOW
+        sleep 10 if -t STDIN && (-t STDOUT || !(-f STDOUT || -c STDOUT));
+    }
+
+
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.039.
+    use strict;
+    use warnings;
+
+    require Module::Build; Module::Build->VERSION(0.28);
+
+
+    my %module_build_args = (
+      "configure_requires" => {
+        "Module::Build::Tiny" => "0.034"
+      },
+      "dist_abstract" => "UV backend for Mojo::Reactor",
+      "dist_author" => [
+        "Dan Book <dbook\@cpan.org>"
+      ],
+      "dist_name" => "Mojo-Reactor-UV",
+      "dist_version" => "0.002",
+      "license" => "artistic_2",
+      "module_name" => "Mojo::Reactor::UV",
+      "recursive_test_files" => 1,
+      "requires" => {
+        "Carp" => 0,
+        "Mojolicious" => "6.0",
+        "Scalar::Util" => 0,
+        "UV" => "0.23",
+        "perl" => "5.010001"
+      },
+      "test_requires" => {
+        "IO::Socket::INET" => 0,
+        "Test::More" => "0.88"
+      }
+    );
+
+
+    my %fallback_build_requires = (
+      "IO::Socket::INET" => 0,
+      "Test::More" => "0.88"
+    );
+
+
+    unless ( eval { Module::Build->VERSION(0.4004) } ) {
+      delete $module_build_args{test_requires};
+      $module_build_args{build_requires} = \%fallback_build_requires;
+    }
+
+    my $build = Module::Build->new(%module_build_args);
+
+
+    $build->create_build_script;
+}
