@@ -4,24 +4,37 @@
       "Dan Book <dbook@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.036, CPAN::Meta::Converter version 2.150001",
+   "generated_by" : "Dist::Zilla version 5.039, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "artistic_2"
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
+      "version" : 2
    },
    "name" : "Mojo-Reactor-UV",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "xt",
+         "inc",
+         "share",
+         "eg",
+         "examples"
+      ]
+   },
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "0"
+            "Module::Build::Tiny" : "0.034"
          }
       },
       "develop" : {
          "requires" : {
-            "Dist::Zilla::PluginBundle::Author::DBOOK" : "0.003"
+            "Dist::Zilla::PluginBundle::Author::DBOOK" : "0.016",
+            "Pod::Coverage::TrustPod" : "0",
+            "Test::Pod" : "1.41",
+            "Test::Pod::Coverage" : "1.08"
          }
       },
       "runtime" : {
@@ -43,7 +56,7 @@
    "provides" : {
       "Mojo::Reactor::UV" : {
          "file" : "lib/Mojo/Reactor/UV.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       }
    },
    "release_status" : "stable",
@@ -58,6 +71,10 @@
          "web" : "https://github.com/Grinnz/Mojo-Reactor-UV"
       }
    },
-   "version" : "0.001"
+   "version" : "0.002",
+   "x_contributors" : [
+      "Dan Book <grinnz@gmail.com>",
+      "Dan Book <grinnz@grinnz.com>"
+   ]
 }
 
